# advent-of-code

./: README.md
.devcontainer/: devcontainer.json
.gitea/workflows/: build.yml
2023/: README.md  pyproject.toml
2023/day-01/: part-1.py  part-2.py
2023/day-02/: part-1.py  part-2.py
2023/day-03/: part-1.py  part-2.py
2023/day-04/: part-1.py  part-2.py
2023/day-05/: part-1.py  part-2.py
2023/day-06/: part-1.py  part-2.py
2023/day-07/: part-1.py  part-2.py
2023/day-08/: part-1.py  part-2.py
2023/day-09/: part-1.py  part-2.py
2023/day-10/: part-1.py  part-2.py
2023/day-11/: part-1.py  part-2.py
2023/day-12/: part-1.py  part-2.py
2023/day-13/: part-1.py  part-2.py
2023/day-14/: part-1.py  part-2.py
2023/day-15/: part-1.py  part-2.py
2023/day-16/: part-1.py  part-2.py
2023/day-17/: part-1.py  part-2.py
2023/day-18/: part-1.py  part-2.py
2023/day-19/: part-1.py  part-2.py
2023/day-20/: part-1.py  part-2.py
2023/day-21/: part-1.py  part-2.py
2023/day-22/: part-1.py  part-2.py
2023/day-23/: part-1.py  part-2.py
2023/day-24/: part-1.py  part-2.py
2023/day-25/: part-1.py
